{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 44,
  "lineage": "468dda0e-6c55-8ead-be97-0534d4046c99",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e0c57b7b0ae4d49a",
            "domain": "vpc",
            "id": "eipalloc-06d0080151d0149e2",
            "network_interface": "eni-066293b3e98c07a37",
            "private_dns": "ip-10-0-0-16.ec2.internal",
            "private_ip": "10.0.0.16",
            "public_dns": "ec2-3-215-223-228.compute-1.amazonaws.com",
            "public_ip": "3.215.223.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0135ebe77ce29a7c4",
            "domain": "vpc",
            "id": "eipalloc-045993d6e40630409",
            "network_interface": "eni-0bd17212396bd747b",
            "private_dns": "ip-10-0-1-98.ec2.internal",
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-34-193-117-210.compute-1.amazonaws.com",
            "public_ip": "34.193.117.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05e42afffc070e8df",
            "owner_id": "922632777650",
            "tags": {
              "Name": "dev_tf_igw"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fargate.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:loadbalancer/app/dev-ecs-lb/10e03d47e0f3bffe",
            "arn_suffix": "app/dev-ecs-lb/10e03d47e0f3bffe",
            "dns_name": "dev-ecs-lb-589727707.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:922632777650:loadbalancer/app/dev-ecs-lb/10e03d47e0f3bffe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-ecs-lb",
            "security_groups": [
              "sg-0af858a86da9256c0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0068df3ee8f886d86"
              },
              {
                "subnet_id": "subnet-0eb406a88da12d8ca"
              }
            ],
            "subnets": [
              "subnet-0068df3ee8f886d86",
              "subnet-0eb406a88da12d8ca"
            ],
            "vpc_id": "vpc-0b6d06fa4662f6703",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fargate.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-test-alb-listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:listener/app/dev-ecs-lb/10e03d47e0f3bffe/26ce292f47725de9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:targetgroup/dev--ecs-lb-target/d4eacbca774fcd86",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:922632777650:listener/app/dev-ecs-lb/10e03d47e0f3bffe/26ce292f47725de9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:loadbalancer/app/dev-ecs-lb/10e03d47e0f3bffe",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.fargate.module.alb.aws_lb.web_lb",
            "module.fargate.module.alb.aws_lb_target_group.web_lb_target",
            "module.vpc.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fargate.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-test-alb-two-listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:listener/app/dev-ecs-lb/10e03d47e0f3bffe/62230ab0194746b5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:targetgroup/dev--ecs-lb-two-target/b8a6ec88815da5a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:922632777650:listener/app/dev-ecs-lb/10e03d47e0f3bffe/62230ab0194746b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:loadbalancer/app/dev-ecs-lb/10e03d47e0f3bffe",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.fargate.module.alb.aws_lb.web_lb",
            "module.fargate.module.alb.aws_lb_target_group.web_lb_two_target",
            "module.vpc.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fargate.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:targetgroup/dev--ecs-lb-target/d4eacbca774fcd86",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:listener-rule/app/dev-ecs-lb/10e03d47e0f3bffe/26ce292f47725de9/0081c5ad0611f0ed",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/block"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:922632777650:listener-rule/app/dev-ecs-lb/10e03d47e0f3bffe/26ce292f47725de9/0081c5ad0611f0ed",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:listener/app/dev-ecs-lb/10e03d47e0f3bffe/26ce292f47725de9",
            "priority": 1
          },
          "dependencies": [
            "module.fargate.module.alb.aws_lb_listener.my-test-alb-listner",
            "module.fargate.module.alb.aws_lb_target_group.web_lb_target"
          ]
        }
      ]
    },
    {
      "module": "module.fargate.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_lb_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:targetgroup/dev--ecs-lb-target/d4eacbca774fcd86",
            "arn_suffix": "targetgroup/dev--ecs-lb-target/d4eacbca774fcd86",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:922632777650:targetgroup/dev--ecs-lb-target/d4eacbca774fcd86",
            "lambda_multi_value_headers_enabled": false,
            "name": "dev--ecs-lb-target",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fargate.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_lb_two_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:922632777650:targetgroup/dev--ecs-lb-two-target/b8a6ec88815da5a3",
            "arn_suffix": "targetgroup/dev--ecs-lb-two-target/b8a6ec88815da5a3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:922632777650:targetgroup/dev--ecs-lb-two-target/b8a6ec88815da5a3",
            "lambda_multi_value_headers_enabled": false,
            "name": "dev--ecs-lb-two-target",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d0080151d0149e2",
            "id": "nat-002abd2ec296a2813",
            "network_interface_id": "eni-066293b3e98c07a37",
            "private_ip": "10.0.0.16",
            "public_ip": "3.215.223.228",
            "subnet_id": "subnet-0eb406a88da12d8ca",
            "tags": {
              "Name": "dev_tf_ngw_1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.tf_eip",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045993d6e40630409",
            "id": "nat-00066e6f8036fbeb4",
            "network_interface_id": "eni-0bd17212396bd747b",
            "private_ip": "10.0.1.98",
            "public_ip": "34.193.117.210",
            "subnet_id": "subnet-0068df3ee8f886d86",
            "tags": {
              "Name": "dev_tf_ngw_2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.tf_eip",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_app_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05294f299b3e5adb8",
            "owner_id": "922632777650",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00066e6f8036fbeb4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_tf_app_rt"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_eip.tf_eip",
            "module.vpc.aws_nat_gateway.tf_nat_gateway",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-050c0cd08200abce0",
            "owner_id": "922632777650",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e42afffc070e8df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_tf_public"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_internet_gateway",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_web_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05b4339e6f3825134",
            "owner_id": "922632777650",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-002abd2ec296a2813",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_tf_web_rt"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_eip.tf_eip",
            "module.vpc.aws_nat_gateway.tf_nat_gateway",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_private_az_2_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e81015c51dd62406",
            "route_table_id": "rtb-05294f299b3e5adb8",
            "subnet_id": "subnet-0f33e579cbe810a3a"
          },
          "dependencies": [
            "module.vpc.aws_eip.tf_eip",
            "module.vpc.aws_nat_gateway.tf_nat_gateway",
            "module.vpc.aws_route_table.tf_app_rt",
            "module.vpc.aws_subnet.tf_app_subnet",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcc68baabbdadd4c",
            "route_table_id": "rtb-05294f299b3e5adb8",
            "subnet_id": "subnet-0188b5292e3ba9342"
          },
          "dependencies": [
            "module.vpc.aws_eip.tf_eip",
            "module.vpc.aws_nat_gateway.tf_nat_gateway",
            "module.vpc.aws_route_table.tf_app_rt",
            "module.vpc.aws_subnet.tf_app_subnet",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c40e377388ef50d6",
            "route_table_id": "rtb-050c0cd08200abce0",
            "subnet_id": "subnet-0eb406a88da12d8ca"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_internet_gateway",
            "module.vpc.aws_route_table.tf_public_rt",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00110385057e6d3cf",
            "route_table_id": "rtb-050c0cd08200abce0",
            "subnet_id": "subnet-0068df3ee8f886d86"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_internet_gateway",
            "module.vpc.aws_route_table.tf_public_rt",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_web_rt_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0461a67d597a3eb34",
            "route_table_id": "rtb-05b4339e6f3825134",
            "subnet_id": "subnet-02f7036c529e6e7e2"
          },
          "dependencies": [
            "module.vpc.aws_eip.tf_eip",
            "module.vpc.aws_nat_gateway.tf_nat_gateway",
            "module.vpc.aws_route_table.tf_web_rt",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_subnet.tf_web_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065974f4986f7e4ed",
            "route_table_id": "rtb-05b4339e6f3825134",
            "subnet_id": "subnet-01324765fc8a3e02b"
          },
          "dependencies": [
            "module.vpc.aws_eip.tf_eip",
            "module.vpc.aws_nat_gateway.tf_nat_gateway",
            "module.vpc.aws_route_table.tf_web_rt",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_subnet.tf_web_subnet",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:security-group/sg-0af858a86da9256c0",
            "description": "Used for access to the public sentries",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af858a86da9256c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev_alb_sg",
            "name_prefix": null,
            "owner_id": "922632777650",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:security-group/sg-0bf1d6f9c0f2bcb82",
            "description": "Used for access to the public sentries",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf1d6f9c0f2bcb82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devpublic_sentry_sg",
            "name_prefix": null,
            "owner_id": "922632777650",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:security-group/sg-0a101a7ddb071147e",
            "description": "Used for access to the containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a101a7ddb071147e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af858a86da9256c0"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af858a86da9256c0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devecs_entry_sg",
            "name_prefix": null,
            "owner_id": "922632777650",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_app_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:subnet/subnet-0f33e579cbe810a3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0f33e579cbe810a3a",
            "map_public_ip_on_launch": false,
            "owner_id": "922632777650",
            "tags": {
              "Name": "dev_tf_web_subnet1"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:subnet/subnet-0188b5292e3ba9342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-0188b5292e3ba9342",
            "map_public_ip_on_launch": false,
            "owner_id": "922632777650",
            "tags": {
              "Name": "dev_tf_web_subnet2"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:subnet/subnet-0eb406a88da12d8ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0eb406a88da12d8ca",
            "map_public_ip_on_launch": true,
            "owner_id": "922632777650",
            "tags": {
              "Name": "dev_tf_public1"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:subnet/subnet-0068df3ee8f886d86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0068df3ee8f886d86",
            "map_public_ip_on_launch": true,
            "owner_id": "922632777650",
            "tags": {
              "Name": "dev_tf_public2"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_web_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:subnet/subnet-02f7036c529e6e7e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-02f7036c529e6e7e2",
            "map_public_ip_on_launch": false,
            "owner_id": "922632777650",
            "tags": {
              "Name": "dev_tf_web_subnet1"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:subnet/subnet-01324765fc8a3e02b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-01324765fc8a3e02b",
            "map_public_ip_on_launch": false,
            "owner_id": "922632777650",
            "tags": {
              "Name": "dev_tf_web_subnet2"
            },
            "vpc_id": "vpc-0b6d06fa4662f6703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:922632777650:vpc/vpc-0b6d06fa4662f6703",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079a2d8e59d351249",
            "default_route_table_id": "rtb-024e06b848d3ece50",
            "default_security_group_id": "sg-0981887b3ba60b5a5",
            "dhcp_options_id": "dopt-04b402ab4e984a987",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b6d06fa4662f6703",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-024e06b848d3ece50",
            "owner_id": "922632777650",
            "tags": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}